Get cluster info via POST
Work around url encoding issues with GET when using AWS StackId as cluster_id
